--- a/ui/bower.json
+++ b/ui/bower.json
@@ -9,7 +9,8 @@
   ],
   "dependencies": {
     "jquery": "~2.2",
-    "lodash": "~4.9",
+    "jquery-resize": "*",
+    "lodash": "*",
     "bootstrap": "*",
     "angular": "~1.5",
     "angular-ui-router": "~0.2",
@@ -20,6 +21,7 @@
     "angular-bootstrap": "~1.3.1",
     "moment": "~2.12",
     "less.js": "~2.6",
-    "font-awesome": "*"
+    "font-awesome": "*",
+    "popper.js": "*"
   }
 }
