--- a/ui/bower.json
+++ b/ui/bower.json
@@ -22,6 +22,8 @@
     "moment": "~2.12",
     "less.js": "~2.6",
     "font-awesome": "*",
-    "popper.js": "*"
+    "popper.js": "*",
+    "oclazyload ": "*",
+    "ngFitText": "*"
   }
 }
