Initial layout of boards; drag and drop to position

--- a/ui/bower.json
+++ b/ui/bower.json
@@ -24,6 +24,7 @@
     "font-awesome": "*",
     "popper.js": "*",
     "oclazyload ": "*",
-    "ngFitText": "*"
+    "ngFitText": "*",
+    "angular-gridster": "*"
   }
 }
