Adding dashboard backend service

--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "winston": "*",
     "yargs": "*",
     "express": "*",
-    "body-parser": "*"
+    "body-parser": "*",
+    "yaml": "*"
   },
   "devDependencies": {}
 }
