Initial weather conditions; socket.io for entity state changes

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
     "yargs": "*",
     "express": "*",
     "body-parser": "*",
-    "yaml": "*"
+    "yaml": "*",
+    "socket.io": "*",
+    "socketio-wildcard": "*",
+    "socket.io-client": "*"
   },
   "devDependencies": {}
 }
