--- a/server/dashboards.yaml
+++ b/server/dashboards.yaml
@@ -1,19 +1,7 @@
 - name: Command Center
-  device: 1080P Monitor
+  device: Galaxy Tab A
   pages:
     - widgets:
-        - name: Date
-          plugin_module: hassdash.widget.date
-          plugin_name: Date
-          size:
-            x: 2
-            y: 1
-          position:
-            row: 1
-            col: 8
-          show_label: false
-          entity: sensor.date_time_iso
-          date_format: dddd, MMMM Do YYYY
         - name: Clock
           plugin_module: hassdash.widget.clock
           plugin_name: Clock
@@ -26,26 +14,6 @@
           show_label: false
           entity: sensor.date_time_iso
           time_format: h:mm:ss A
-    - widgets: []
-  width: 1920
-  height: 1080
-  customizable: false
-- name: New Board
-  device: Sprocket DX2
-  pages:
-    - widgets:
-        - name: Clock
-          plugin_module: hassdash.widget.clock
-          plugin_name: Clock
-          size:
-            x: 2
-            y: 1
-          position:
-            row: 1
-            col: 2
-          show_label: false
-          entity: sensor.date_time_iso
-          time_format: h:mm A
         - name: Date
           plugin_module: hassdash.widget.date
           plugin_name: Date
@@ -54,11 +22,80 @@
             y: 1
           position:
             row: 2
-            col: 1
+            col: 0
           show_label: false
           entity: sensor.date_time_iso
           date_format: dddd, MMMM Do YYYY
+        - name: Date
+          plugin_module: hassdash.widget.date
+          plugin_name: Date
+          size:
+            x: 2
+            y: 1
+          position:
+            row: 0
+            col: 0
+          show_label: false
+          date_format: M/D/YY
+          entity: sensor.date_time_iso
+    - widgets:
+        - name: Clock
+          plugin_module: hassdash.widget.clock
+          plugin_name: Clock
+          size:
+            x: 6
+            y: 2
+          position:
+            row: 6
+            col: 7
+          show_label: false
+          time_format: HH:mm:ss
+          entity: sensor.date_time_iso
+    - widgets: []
+  width: 760
+  height: 1024
+  customizable: false
+  portrait: true
+- name: New Board
+  device: Sprocket DX2
+  pages:
+    - widgets:
+        - name: Weather Conditions
+          plugin_module: hassdash.widget.weather_conditions
+          plugin_name: Weather Conditions
+          size:
+            x: 2
+            y: 1
+          position:
+            row: 0
+            col: 0
+          show_label: false
+          entity: weather.dark_sky
+        - name: Date
+          plugin_module: hassdash.widget.date
+          plugin_name: Date
+          size:
+            x: 2
+            y: 1
+          position:
+            row: 0
+            col: 4
+          show_label: false
+          entity: sensor.date_time_iso
+          date_format: M/D/YYYY
+        - name: Clock
+          plugin_module: hassdash.widget.clock
+          plugin_name: Clock
+          size:
+            x: 6
+            y: 2
+          position:
+            row: 1
+            col: 0
+          show_label: false
+          entity: sensor.date_time_iso
+          time_format: h:mm A
   width: 320
   height: 240
   customizable: false
-  portrait: false
+  portrait: true
