--- a/ui/bower.json
+++ b/ui/bower.json
@@ -19,12 +19,16 @@
     "angular-cookies": "~1.5",
     "angular-mocks": "~1.5",
     "angular-bootstrap": "~1.3.1",
+    "angular-touch": "~1.5",
     "moment": "~2.12",
     "less.js": "~2.6",
     "font-awesome": "*",
     "popper.js": "*",
     "oclazyload ": "*",
     "ngFitText": "*",
-    "angular-gridster": "*"
+    "angular-gridster": "*",
+    "mdi": "*",
+    "angular-socket-io": "*",
+    "socket.io-client": "*"
   }
 }
