--- a/server/dashboards.yaml
+++ b/server/dashboards.yaml
@@ -1,43 +1,6 @@
 - name: Command Center
-  device: Galaxy Tab A
+  device: Custom
   pages:
-    - widgets:
-        - name: Clock
-          plugin_module: hassdash.widget.clock
-          plugin_name: Clock
-          size:
-            x: 4
-            y: 1
-          position:
-            row: 1
-            col: 0
-          show_label: false
-          entity: sensor.date_time_iso
-          time_format: h:mm:ss A
-        - name: Date
-          plugin_module: hassdash.widget.date
-          plugin_name: Date
-          size:
-            x: 4
-            y: 1
-          position:
-            row: 2
-            col: 0
-          show_label: false
-          entity: sensor.date_time_iso
-          date_format: dddd, MMMM Do YYYY
-        - name: Date
-          plugin_module: hassdash.widget.date
-          plugin_name: Date
-          size:
-            x: 2
-            y: 1
-          position:
-            row: 0
-            col: 0
-          show_label: false
-          date_format: M/D/YY
-          entity: sensor.date_time_iso
     - widgets:
         - name: Clock
           plugin_module: hassdash.widget.clock
@@ -46,16 +9,67 @@
             x: 6
             y: 2
           position:
-            row: 6
-            col: 7
+            row: 0
+            col: 28
+          show_label: false
+          entity: sensor.date_time_iso
+          time_format: h:mm A
+        - name: Date
+          plugin_module: hassdash.widget.date
+          plugin_name: Date
+          size:
+            x: 6
+            y: 1
+          position:
+            row: 2
+            col: 28
+          show_label: false
+          entity: sensor.date_time_iso
+          date_format: dddd, MMMM Do YYYY
+        - name: Weather Conditions
+          plugin_module: hassdash.widget.weather_conditions
+          plugin_name: Weather Conditions
+          size:
+            x: 8
+            y: 3
+          position:
+            row: 0
+            col: 0
+          show_label: false
+          entity: weather.dark_sky
+          icon_color: black
+        - name: Weather Forecast
+          plugin_module: hassdash.widget.weather_forecast
+          plugin_name: Weather Forecast
+          size:
+            x: 10
+            y: 4
+          position:
+            row: 0
+            col: 13
+          show_label: false
+          entity: weather.dark_sky
+          icon_color: black
+    - widgets:
+        - name: Clock
+          plugin_module: hassdash.widget.clock
+          plugin_name: Clock
+          size:
+            x: 1
+            y: 1
+          position:
+            row: 0
+            col: 0
           show_label: false
           time_format: HH:mm:ss
           entity: sensor.date_time_iso
     - widgets: []
-  width: 1024
-  height: 760
-  customizable: false
-  portrait: true
+  width: 1680
+  height: 1050
+  customizable: true
+  portrait: false
+  device_width: 1680
+  device_height: 1050
 - name: New Board
   device: Sprocket DX2
   pages:
@@ -95,6 +109,29 @@
           show_label: false
           entity: sensor.date_time_iso
           date_format: M/D/YYYY
+        - name: Weather Conditions
+          plugin_module: hassdash.widget.weather_conditions
+          plugin_name: Weather Conditions
+          size:
+            x: 1
+            y: 1
+          position:
+            row: 4
+            col: 2
+          show_label: false
+          entity: weather.dark_sky
+    - widgets:
+        - name: Weather Conditions
+          plugin_module: hassdash.widget.weather_conditions
+          plugin_name: Weather Conditions
+          size:
+            x: 4
+            y: 2
+          position:
+            row: 1
+            col: 1
+          show_label: false
+          entity: weather.dark_sky
   width: 320
   height: 240
   customizable: false
