--- a/ui/package.json
+++ b/ui/package.json
@@ -11,14 +11,14 @@
     "grunt-contrib-copy": "~0.5",
     "grunt-contrib-cssmin": "~0.7",
     "grunt-contrib-htmlmin": "~0.1",
-    "grunt-contrib-jshint": "~0.9",
+    "grunt-contrib-jshint": "~0.12",
     "grunt-contrib-less": "~0.8",
     "grunt-contrib-uglify": "~0.2",
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
-    "grunt-karma": "~0.8.3",
-    "grunt-ng-annotate": "~0.5",
-    "karma": "~0.12.6",
+    "grunt-karma": "^0.12.2",
+    "grunt-ng-annotate": "^1.0.1",
+    "karma": "^1.6.0",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
