Hassio integration and central build

--- a/hass.io/config.json
+++ b/hass.io/config.json
@@ -1,12 +1,16 @@
 {
   "name": "Hass.Dash",
-  "version": "4",
+  "version": "5",
   "slug": "hass_dash",
   "description": "Dashboard creation for home assistant",
   "ingress": true,
+  "homeassistant_api": true,
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "before",
   "boot": "auto",
   "options": {},
-  "schema": {}
+  "schema": {},
+  "ports": {
+    "9045/tcp": 9045
+  }
 }
