--- a/ui/.jshintrc
+++ b/ui/.jshintrc
@@ -11,6 +11,7 @@
     "eqnull": true,
     "browser": true,
     "smarttabs": true,
+    "multistr": true,
     "globals": {
         "jQuery": true,
         "angular": true,
