--- a/ui/package.json
+++ b/ui/package.json
@@ -13,11 +13,12 @@
     "grunt-contrib-htmlmin": "~0.1",
     "grunt-contrib-jshint": "~0.12",
     "grunt-contrib-less": "~0.8",
-    "grunt-contrib-uglify": "~0.2",
+    "grunt-contrib-uglify": "~4.0",
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "^0.12.2",
     "grunt-ng-annotate": "^1.0.1",
+    "jshint-stylish": "^2.2.1",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
