--- a/ui/bower.json
+++ b/ui/bower.json
@@ -29,6 +29,7 @@
     "angular-gridster": "*",
     "mdi": "*",
     "angular-socket-io": "*",
-    "socket.io-client": "*"
+    "socket.io-client": "*",
+    "angularjs-color-picker": "*"
   }
 }
